# Microplate-Reader-Software

./: .gitmodules  LICENSE  README.md  microplate-reader-config.toml  microplate-reader.py  pyproject.toml  style.qss
.github/workflows/: python-app.yml
microplate_reader/widget/: mr_comport_menu.py  mr_microplate_table_widget.py
microplate_reader/window/: mr_main_window.py
