[tool.poetry]
name = "microplate-reader-software"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
PySide6 = "^6.6.1"
numpy = "^1.26.4"
pyqtgraph = "^0.13.3"
loguru = "^0.7.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
